--- a/style.css
+++ b/style.css
@@ -40,15 +40,47 @@ header {
   }
 
   main {
-    
+      margin: 50px;
   }
 
   main h1 {
     color: rgb(129, 141, 179);
     font-family: arial;
   }
-
-  footer {
+table {
+  margin-top: 35px;
+}
+table, caption, th, td {
+  border: 1px solid #000;
+}
+th, td {
+  width: 150px;
+  height: 35px;
+  text-align: center;
+}
+caption {
+  text-transform: uppercase;
+  font-weight: 600;
+  height: 40px;
+  padding-top: 15px;
+  color: #753a30;
+}
+label {
+  display: block;
+  margin: 15px 0 0 0;
+}
+input{
+        width:300px;
+}
+textarea {
+        width: 300px;
+} 
+input[type="submit"] {
+        display: block;
+        margin: 20px 0 10px 0;;
+        width: 100px;
+}       
+footer {
     height: 40px;
     background-color: rgb(129, 141, 179);
     text-align: center;
