--- a/style.css
+++ b/style.css
@@ -79,7 +79,11 @@ input[type="submit"] {
         display: block;
         margin: 20px 0 10px 0;;
         width: 100px;
-}       
+}     
+main #album #photo img {
+  width: 400px;
+}
+
 footer {
     height: 40px;
     background-color: rgb(129, 141, 179);
